--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Welcome to DMV Board Games</h1>
-<a href="default.asp"><img src="smiley.gif" alt="HTML tutorial" style="width:300px;height:300px;"></a>
+<a href="default.asp"><img src="dye_catan_150407_0564.jpg" style="width:300px;height:300px;"></a>
 
 
 </body>
